[package]
name = "mohan"
version = "0.0.46"
authors = ["hello@organism.org"]
description = "Shared Types & Utils"
license = "Apache-2.0"
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
parking_lot = {version = "0.9", features = ["deadlock_detection"]}
failure = "0.1"
zeroize = { version = "1.0.0", features = ["zeroize_derive"] }
byteorder = "1"
bytes = { version = "0.4.12", features = ["serde"] }
curve25519-dalek-organism = { version = "0.0.*", features = ["serde", "alloc", "std"] }
blake2b_simd = "0.5"
rayon = "1.1"
uint = "0.8.1"

[dependencies.rand]
version = "0.7.2"
optional = true
features = []

[dependencies.rand_core]
version = "0.5.*" 
optional = true


[features]
default = ["rand", "rand_os"]
rand_os = [] 


[dev-dependencies]
quickcheck = "0.8"
chrono = { version = "0.4", default-features = false }
hex = "0.3"
bacteria = "0.0.5"