[package]
name = "mohan"
version = "0.0.52"
authors = ["hello@organism.org"]
description = "Shared Types & Utils"
license = "Apache-2.0"
edition = "2018"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
parking_lot = {version = "0.10", features = ["deadlock_detection"]}
thiserror = "1.0"
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
byteorder = "1"
bytes = { version = "0.5", features = ["serde"] }
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "nightly", "serde", "alloc"] }
blake2b_simd = "0.5"
rayon = "1.3"
uint = "0.8"
subtle = "2"


[dependencies.rand]
version = "0.7.3"
optional = true
features = []

[dependencies.rand_core]
version = "0.5.*" 
optional = true


[features]
default = ["rand", "rand_os", "avx2_backend"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
rand_os = [] 


[dev-dependencies]
quickcheck = "0.8"
chrono = { version = "0.4", default-features = false }
hex = "0.3"
bacteria = "0.0.5"