[package]
name = "mohan"
version = "0.0.54"
authors = ["hello@organism.org"]
description = "Shared Types & Utils"
license = "Apache-2.0"
edition = "2018"


[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
byteorder = "1"
blake2b_simd = "0.5"
rayon = "1.3"
uint = "0.9"
fixed-hash = "0.7"
subtle = "2"

[target.'cfg(any(target_feature = "avx2", target_feature = "avx"))'.dependencies]
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["simd_backend", "nightly", "serde"] }

[target.'cfg(not(any(target_feature = "avx2", target_feature = "avx")))'.dependencies]
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", features = ["nightly", "u64_backend", "serde"] }


[dependencies.rand]
version = "0.8"
optional = true
features = []

[dependencies.rand_core]
version = "0.6" 
optional = true


[features]
default = ["rand", "rand_os"]
rand_os = [] 


[dev-dependencies]
quickcheck = "0.8"
chrono = { version = "0.4", default-features = false }
hex = "0.3"
bacteria = "0.0.10"